--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "discord.js": "^13.1.0",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "^4.2.7",
+        "libsodium-wrappers": "^0.7.9",
         "opusscript": "0.0.7",
         "ytdl-core": "^4.9.1"
     },
@@ -17,7 +18,7 @@
         "start": "node bot.js"
     },
     "engines": {
-        "node": "16.9.1",
-        "npm": "7.21.1"
+        "node": "16.10.0",
+        "npm": "7.24.0"
     }
 }
