--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
     "main": "bot.js",
     "author": "thastreet",
     "dependencies": {
-        "@discordjs/voice": "^0.8.0",
+        "@discordjs/rest": "^1.1.0",
+        "@discordjs/voice": "^0.11.0",
         "axios": "^0.26.1",
-        "discord.js": "^13.5.1",
+        "discord.js": "^14.3.0",
         "ffmpeg": "0.0.4",
-        "ffmpeg-static": "^5.0.0",
-        "libsodium-wrappers": "^0.7.9",
+        "ffmpeg-static": "^5.1.0",
+        "libsodium-wrappers": "^0.7.10",
         "opusscript": "0.0.8",
-        "ytdl-core": "^4.10.0"
+        "ytdl-core": "^4.11.1"
     },
     "scripts": {
         "start": "node bot.js"
     },
     "engines": {
-        "node": "16.10.0",
-        "npm": "7.24.0"
+        "node": "16.14.2",
+        "npm": "8.19.1"
     }
 }
