--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "main": "bot.js",
     "author": "thastreet",
     "dependencies": {
-        "@discordjs/rest": ">=1.1.0",
-        "@discordjs/voice": ">=0.14.0",
-        "axios": ">=1.1.2",
-        "discord.js": ">=14.3.0",
-        "ffmpeg": ">=0.0.4",
-        "ffmpeg-static": ">=5.1.0",
-        "libsodium-wrappers": ">=0.7.10",
+        "@discordjs/rest": "1.6.0",
+        "@discordjs/voice": "0.15.0",
+        "axios": "1.3.4",
+        "discord.js": "14.8.0",
+        "ffmpeg": "0.0.4",
+        "ffmpeg-static": "5.1.0",
+        "libsodium-wrappers": "0.7.11",
         "opusscript": "0.0.8",
-        "ytdl-core": ">=4.11.2"
+        "ytdl-core": "4.11.2"
     },
     "scripts": {
         "start": "node bot.js"
