--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "main": "app.js",
     "author": "thastreet",
     "dependencies": {
-        "@discordjs/rest": "2.0.1",
-        "@discordjs/voice": "0.16.0",
-        "axios": "1.5.0",
-        "discord.js": "14.13.0",
+        "@discordjs/rest": "2.2.0",
+        "@discordjs/voice": "0.16.1",
+        "axios": "1.6.2",
+        "discord.js": "14.14.1",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "5.2.0",
         "libsodium-wrappers": "0.7.13",
+        "npm": "^10.2.5",
         "opusscript": "0.1.0",
         "ytdl-core": "4.11.5"
     },
@@ -19,7 +20,7 @@
         "start": "node bot.js"
     },
     "engines": {
-        "node": "16.14.2",
-        "npm": "9.8.1"
+        "node": "18.18.2",
+        "npm": "10.2.5"
     }
 }
