--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "@discordjs/rest": "2.3.0",
         "@discordjs/voice": "0.17.0",
         "@distube/ytdl-core": "^4.14.4",
-        "axios": "1.7.2",
+        "axios": "^1.7.5",
         "discord.js": "14.15.3",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "5.2.0",
